<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectClass"
    android:layout_width="400dp"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:layout_margin="10dp" >
    
		<ImageButton 
		    android:id="@+id/b_close"
		    android:contentDescription="@string/b_close"
		    android:background="@android:color/transparent"
		    
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_alignParentRight="true" />	
		      
		<Button android:id="@+id/b_makeroom" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    
		    android:text="@string/b_makeroom" />
		    
		<EditText android:id="@+id/l_roomname"
	        android:layout_height="wrap_content"
	        android:layout_width="250dp"
	        android:layout_marginBottom="6dp"
	        
	        android:hint="@string/l_roomname" />
		
		<TextView android:id="@+id/l_roomdiff"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/l_roomname"

		    android:text="@string/l_roomdiff" />
		
		<RadioGroup android:id="@+id/rg_roomdiff"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/l_roomdiff"
		    android:layout_marginBottom="6dp"
		    android:orientation="horizontal" >
		    <RadioButton android:id="@+id/diff1"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/easy"/>
		    <RadioButton android:id="@+id/diff2"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/standard"/>
		    <RadioButton android:id="@+id/diff3"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/hard"/>
		</RadioGroup>
		
		<TextView android:id="@+id/l_roommaxplr"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/rg_roomdiff"    
		    
		    android:text="@string/l_roommaxplr" />
		
		<RadioGroup android:id="@+id/rg_roommaxplr"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/l_roommaxplr"
		    android:orientation="horizontal" >
		    <RadioButton android:id="@+id/plyr1"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/p1"/>
		    <RadioButton android:id="@+id/plyr2"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/p2"/>
		    <RadioButton android:id="@+id/plyr3"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/p3"/>
		    <RadioButton android:id="@+id/plyr4"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="8dp"
		    	android:text="@string/p4"/> 
		</RadioGroup>
</RelativeLayout>