<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:padding="10dp" 
                android:background="#FFFFFF">
               
    <EditText 
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:hint="@string/user" /> 
    
    <EditText 
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_below="@id/username"
        android:layout_marginBottom="6dp"
        android:hint="@string/pass" />
    
    <EditText 
        android:id="@+id/cpassword"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
       	android:inputType="textPassword"
        android:layout_below="@id/password"
        android:layout_marginBottom="6dp"
        android:hint="@string/cpas" />
                
    <Button 
        android:id="@+id/submit"
        android:layout_height="fill_parent"
        android:layout_width="250dp" 
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"     
        android:layout_below="@id/cpassword"        
        android:text="@string/submit" 
        
        android:onClick="submit" />
    
              
</RelativeLayout>