<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" 
    android:padding="20dp"
    android:background="#FFFFFF" >
	
    <Button android:id="@+id/b_create"
		android:layout_width="100dp"
	    android:layout_height="wrap_content" 
	    android:layout_alignParentLeft="true"
	    
	    android:text="@string/b_create" />
    
    <TextView android:id="@+id/l_realmname"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/b_create"
		android:gravity="center"
		
	    android:textSize="35dp"
	    android:text="@string/l_realmname" />
    
	<Button android:id="@+id/b_refresh"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content" 
	    android:layout_alignParentRight="true"
	    
	    android:text="@string/b_refresh" 
	    android:onClick="refreshList" />  
	    
	<GridView android:id="@+id/gv_roomslist"
	    android:layout_width="330dp"
	    android:layout_height="fill_parent"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/b_create"	
	    android:layout_marginTop="10dp"
        
        android:listSelector="@null"
	    android:padding="0dp"
	    android:clipChildren="true"
	    android:numColumns="3"
	    android:verticalSpacing="10dp"
	   	android:horizontalSpacing="10dp"
	    android:columnWidth="100dp"
	    android:stretchMode="none" />
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_alignParentRight="true"
	    android:layout_toRightOf="@id/gv_roomslist"
	    android:layout_below="@id/b_create"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="10dp"
	    android:orientation="vertical" >
	        
	    <TextView android:id="@+id/l_roomname"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_alignParentTop="true" />
	       	
	    <TextView android:id="@+id/l_difficulty"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/l_roomname"/>
	       	
	    <TextView android:id="@+id/l_maxplayer"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/l_difficulty"/>
	        
	    <Button android:id="@+id/b_join"
	        android:layout_width="fill_parent"
	        android:layout_height="80dp"
	        android:layout_alignParentBottom="true"
	        android:text="@string/b_join" />	     
	</RelativeLayout>
</RelativeLayout>